--- a/html5Canvas.html
+++ b/html5Canvas.html
@@ -38,9 +38,11 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <h1 id="main-title">Welcome to the Coder's Corner</h1>
+      <h1 id="main-title">INMATE # 33849595<br></br>
+        Have you seen me?</h1>
+    
     <div id="main-content">
-      lorem ipsum dolor et amellorem ipsum dolor et amellorem ipsum dolor et amellorem ipsum dolor et amellorem ipsum dolor et amellorem ipsum dolor et amellorem ipsum dolor et amellorem ipsum dolor et amellorem ipsum dolor et amellorem ipsum dolor et amel
+      I like pork
       <div id="grid-container">
         <div class="quadrant"><h2>Project 1</h2><br><br><br><br><br></div>
         <div class="quadrant"><h2>Project 2</h2><br><br><br><br><br></div>
