--- a/html5Canvas.html
+++ b/html5Canvas.html
@@ -39,7 +39,8 @@
   <body>
     <canvas id="canvas"></canvas>
       <h1 id="main-title">INMATE # 33849595<br></br>
-        Have you seen me?</h1>
+      Have you seen me?<br></br>
+    <img src="hugo.jpg" style="width:75px; height 75px"></h1>
     
     <div id="main-content">
       I like pork
